# dwg-price-admin

./: .gitignore  .vercelignore  app.py  auth_google.py  backend_factory.py  db.py  generator.py  init_db.py  init_sheets.py  migrate_to_sheets.py  parser.py  pricelist.db-shm  pricelist.db-wal  pyproject.toml  server.py  sheets.py  vercel.json  Единый прайс.html
api/: index.py
pages/: _shared.py  catalog.py  import_export.py  markup.py  settings.py
templates/: _basket_modal.html.jinja2  _hero.html.jinja2  _nav.html.jinja2  _sections.html.jinja2  _summary.html.jinja2  _tasting_cta.html.jinja2  price_list.css  price_list.html.jinja2  price_list.js
