[project]
name = "dwg-price-admin"
version = "1.0.0"
description = "Admin panel for Don't Worry Group price list"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.50",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "python-dotenv>=1.2",
    "flask>=3.0",
    "gunicorn>=22.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[tool.ruff]
format.quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
